--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -20,102 +20,107 @@
     <div id="content" class="hidden max-w-2xl mx-auto pb-20 animate-fade">
         <header class="text-center my-10">
             <h1 class="text-5xl font-black gradient-text mb-2">CÁSSIA PROMPT</h1>
-            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">A Elite da Inteligência Artificial • Engenharia de Alta Performance</p>
+            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">Arquitetura de Prompts de Alta Performance</p>
         </header>
 
-        <div class="glass p-8 rounded-[2.5rem] shadow-2xl space-y-8 mb-10">
+        <div class="glass p-8 rounded-[2.5rem] shadow-2xl space-y-8 mb-10 border border-white/5">
             
-            <div class="space-y-4">
-                <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações do Cérebro IA</h2>
-                <div class="grid grid-cols-2 gap-6">
-                    <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Estilo da Resposta</label>
-                        <select id="tom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl mt-1 text-sm text-white focus:border-pink-500 outline-none">
-                            <option value="Profissional e Técnico">Profissional e Técnico</option>
-                            <option value="Persuasivo e Vendedor">Persuasivo e Vendedor</option>
-                            <option value="Amigável e Casual">Amigável e Casual</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Nível de Criatividade</label>
-                        <input type="range" id="criatividade" min="1" max="10" value="7" class="w-full mt-4">
-                    </div>
+            <h2 class="text-xl font-bold text-pink-500 flex items-center gap-2 italic">🚀 Gerador de Prompt Mestre</h2>
+            
+            <div class="space-y-6">
+                <div>
+                    <label class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">1. Atuar como (Persona de Elite)</label>
+                    <input type="text" id="persona" placeholder="Ex: Especialista em Tráfego Pago, Copywriter de Lançamentos..." class="w-full bg-slate-800 border border-slate-700 p-4 rounded-2xl mt-1 text-sm outline-none focus:border-pink-500 transition-all">
                 </div>
-            </div>
 
-            <hr class="border-slate-800">
+                <div>
+                    <label class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">2. O que deve ser criado?</label>
+                    <input type="text" id="tarefa" placeholder="Ex: Um roteiro de vídeo de vendas para Reels..." class="w-full bg-slate-800 border border-slate-700 p-4 rounded-2xl mt-1 text-sm outline-none focus:border-pink-500 transition-all">
+                </div>
 
-            <div class="space-y-4 bg-blue-500/5 p-6 rounded-3xl border border-blue-500/20">
-                <h2 class="text-xl font-bold text-blue-400 flex items-center gap-2">📱 Mensagens Profissionais</h2>
-                <div class="grid grid-cols-1 gap-4">
-                    <select id="tipoCom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl text-sm text-white">
-                        <option value="WhatsApp de Venda Direta">WhatsApp de Venda</option>
-                        <option value="WhatsApp de Boas-vindas">WhatsApp de Boas-vindas</option>
-                        <option value="E-mail de Apresentação de Serviço">E-mail de Apresentação</option>
+                <div>
+                    <label class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">3. Para quem é? (Público-Alvo)</label>
+                    <input type="text" id="publico" placeholder="Ex: Mulheres empreendedoras que ganham +5k por mês..." class="w-full bg-slate-800 border border-slate-700 p-4 rounded-2xl mt-1 text-sm outline-none focus:border-pink-500 transition-all">
+                </div>
+
+                <div>
+                    <label class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">4. Qual o objetivo principal?</label>
+                    <input type="text" id="objetivo" placeholder="Ex: Convencer a pessoa a clicar no link da Bio agora..." class="w-full bg-slate-800 border border-slate-700 p-4 rounded-2xl mt-1 text-sm outline-none focus:border-pink-500 transition-all">
+                </div>
+
+                <div>
+                    <label class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">5. Tom de Voz e Estilo</label>
+                    <select id="tom" class="w-full bg-slate-800 border border-slate-700 p-4 rounded-2xl mt-1 text-sm outline-none focus:border-pink-500 transition-all">
+                        <option value="Persuasivo, focado em gatilhos mentais e desejo.">Persuasivo e Magnético</option>
+                        <option value="Profissional, autoritário, direto e técnico.">Autoridade e Profissional</option>
+                        <option value="Amigável, acolhedor e com linguagem simples.">Amigável e Conectado</option>
+                        <option value="Descontraído, engraçado e cheio de energia.">Criativo e Disruptivo</option>
                     </select>
-                    <input type="text" id="destinoCom" placeholder="Para quem? (Ex: Cliente novo)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
-                    <input type="text" id="assuntoCom" placeholder="Assunto Principal" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
                 </div>
-                <button onclick="gerarComunicacao()" class="w-full bg-blue-600 p-4 rounded-2xl font-black uppercase text-xs">Gerar Script Perfeito ⚡</button>
-            </div>
 
-            <div class="space-y-4">
-                <h2 class="text-xl font-bold text-purple-400 italic">✍️ Consultoria Especializada</h2>
-                <input type="text" id="nicho" placeholder="Ex: Advogado Imobiliário, Nutricionista..." class="w-full bg-slate-800 p-4 rounded-2xl border border-slate-700 outline-none">
-                <textarea id="problema" placeholder="Descreva a situação aqui..." class="w-full bg-slate-800 p-4 rounded-2xl h-24 border border-slate-700 outline-none resize-none"></textarea>
-                <button onclick="gerarMegaPrompt()" class="w-full bg-gradient-to-r from-purple-600 to-pink-600 p-5 rounded-2xl font-black text-lg uppercase shadow-xl">Gerar Prompt de Elite ✨</button>
+                <button onclick="gerarPromptMestre()" class="w-full bg-gradient-to-r from-purple-600 via-pink-600 to-red-600 p-6 rounded-3xl font-black text-xl uppercase shadow-2xl hover:scale-[1.02] transition-transform active:scale-95">
+                    Engenhar Prompt de Elite 💎
+                </button>
             </div>
         </div>
 
-        <div id="resultadoArea" class="hidden mt-10">
-            <div class="bg-white rounded-[2.5rem] p-8 shadow-2xl border-4 border-purple-500">
-                <textarea id="promptFinal" class="w-full h-64 bg-slate-100 p-5 rounded-2xl text-slate-900 font-semibold text-sm border-none focus:outline-none resize-none"></textarea>
-                <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg">📋 COPIAR PROMPT</button>
+        <div id="resultadoArea" class="hidden mt-10 animate-fade">
+            <div class="bg-white rounded-[2.5rem] p-8 shadow-2xl border-4 border-pink-500">
+                <p class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center italic">Prompt Estruturado com Sucesso</p>
+                <textarea id="promptFinal" class="w-full h-80 bg-slate-50 p-6 rounded-2xl text-slate-900 font-medium text-sm border-none focus:outline-none resize-none leading-relaxed"></textarea>
+                <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg active:scale-95">
+                    📋 COPIAR PROMPT DE ELITE
+                </button>
             </div>
         </div>
     </div>
 
     <div id="error" class="text-center mt-48">
-        <h1 class="text-4xl font-black text-red-600 uppercase mb-2">Acesso Negado</h1>
-        <p class="text-slate-500 font-bold">Por favor, utilize seu link oficial com token.</p>
+        <h1 class="text-4xl font-black text-red-600 uppercase mb-2 italic">Acesso Restrito</h1>
+        <p class="text-slate-500 font-bold tracking-widest uppercase text-xs">Por favor, utilize seu token oficial.</p>
     </div>
 
     <script>
-        // TOKEN ÚNICO QUE JÁ FUNCIONAVA
+        // SEGURANÇA POR TOKEN
         const urlParams = new URLSearchParams(window.location.search);
         if (urlParams.get('token') === 'access-cassia-2026') {
             document.getElementById('content').classList.remove('hidden');
             document.getElementById('error').classList.add('hidden');
         }
 
-        function mostrar(t) {
-            document.getElementById('promptFinal').value = t + "\n\n--- \nGerado por Cássia Prompt";
+        function gerarPromptMestre() {
+            const persona = document.getElementById('persona').value || "Especialista em Comunicação";
+            const tarefa = document.getElementById('tarefa').value || "um conteúdo de alto valor";
+            const publico = document.getElementById('publico').value || "meu público-alvo";
+            const objetivo = document.getElementById('objetivo').value || "gerar engajamento e autoridade";
+            const tom = document.getElementById('tom').value;
+
+            // A MÁGICA DO PROMPT DETALHADO (Framework Expert)
+            const promptMestre = `[SISTEMA DE ENGENHARIA DE PROMPT - CÁSSIA PROMPT]
+
+CONTEXTO: Estou trabalhando na criação de ${tarefa}.
+PERSONA: Você deve atuar como um(a) ${persona} de alto nível, com foco em resultados reais e excelência técnica.
+PÚBLICO-ALVO: O conteúdo é destinado especificamente para ${publico}.
+OBJETIVO: O resultado final deve ser capaz de ${objetivo}.
+
+DIRETRIZES DE EXECUÇÃO:
+1. Use um tom de voz que seja ${tom}.
+2. Evite clichês e linguagens genéricas; foque em detalhes que conectem com as dores e desejos do público.
+3. Estrutura: Garanta que o conteúdo tenha um início impactante (Gancho), um desenvolvimento sólido e uma chamada para ação (CTA) impossível de ignorar.
+4. Linguagem: Seja natural, mas mantenha a sofisticação exigida pela persona.
+
+ENTREGA: Gere agora a versão completa e otimizada de ${tarefa}.`;
+
+            document.getElementById('promptFinal').value = promptMestre + "\n\n--- \nSistema: Cássia Prompt Elite";
             document.getElementById('resultadoArea').classList.remove('hidden');
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
-        }
-
-        function gerarComunicacao() {
-            const tipo = document.getElementById('tipoCom').value;
-            const destino = document.getElementById('destinoCom').value || "Cliente";
-            const assunto = document.getElementById('assuntoCom').value || "serviço";
-            const tom = document.getElementById('tom').value;
-            const p = `Atue como Copywriter. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${tom}.`;
-            mostrar(p);
-        }
-
-        function gerarMegaPrompt() {
-            const nicho = document.getElementById('nicho').value || "Especialista";
-            const problema = document.getElementById('problema').value || "executar tarefa";
-            const criatividade = document.getElementById('criatividade').value;
-            const p = `Atue como ${nicho} nível sênior. Problema: ${problema}. Criatividade: ${criatividade}/10. Responda com profundidade técnica.`;
-            mostrar(p);
         }
 
         function copyPrompt() {
             const cp = document.getElementById("promptFinal");
             cp.select();
             document.execCommand("copy");
-            alert("🚀 Prompt Copiado!");
+            alert("🚀 Prompt de Elite Copiado com Sucesso!");
         }
     </script>
 </body>
