--- a/v25.html
+++ b/v25.html
@@ -4,57 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SÍRIUS V25 | SINGULARITY</title>
+    <title>CÁSSIA PROMPT V8 | ELITE</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
-        :root { --blue: #0078d4; --glass: rgba(255, 255, 255, 0.03); --border: rgba(255, 255, 255, 0.1); }
+        :root { --accent: #c30052; --blue: #0078d4; --glass: rgba(255, 255, 255, 0.03); --border: rgba(255, 255, 255, 0.1); }
         body { 
             margin: 0; background: #000; color: #fff; font-family: 'Segoe UI', sans-serif; height: 100vh;
             display: flex; flex-direction: column; overflow: hidden;
-            background: radial-gradient(circle at top right, #001a33 0%, #000 70%);
+            background: radial-gradient(circle at top right, #33001b 0%, #000 70%);
         }
         #lock { position: fixed; inset: 0; background: #000; z-index: 9999; display: none; align-items: center; justify-content: center; text-align: center; backdrop-filter: blur(20px); }
-        nav { backdrop-filter: blur(20px); background: rgba(0,0,0,0.6); padding: 15px 40px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border); }
+        nav { backdrop-filter: blur(20px); background: rgba(0,0,0,0.6); padding: 15px 40px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--accent); }
         main { flex: 1; display: flex; align-items: center; justify-content: center; padding: 20px; }
         .glass-panel { 
-            background: var(--glass); backdrop-filter: blur(40px); width: 100%; max-width: 1100px; height: 80vh;
+            background: var(--glass); backdrop-filter: blur(40px); width: 100%; max-width: 1100px; height: 85vh;
             border-radius: 20px; border: 1px solid var(--border); display: grid; grid-template-columns: 280px 1fr; overflow: hidden;
             box-shadow: 0 40px 80px rgba(0,0,0,0.6);
         }
         .sidebar { background: rgba(0,0,0,0.3); border-right: 1px solid var(--border); padding: 30px; }
         .workspace { padding: 40px; display: flex; flex-direction: column; gap: 20px; }
-        label { font-size: 10px; font-weight: bold; color: var(--blue); text-transform: uppercase; letter-spacing: 2px; }
+        label { font-size: 10px; font-weight: bold; color: var(--accent); text-transform: uppercase; letter-spacing: 2px; }
         input, textarea { 
             background: rgba(255,255,255,0.05); border: 1px solid var(--border); padding: 15px; 
             border-radius: 10px; color: #fff; font-size: 14px; outline: none; transition: 0.3s;
         }
-        input:focus { border-color: var(--blue); box-shadow: 0 0 15px rgba(0,120,212,0.3); }
-        .btn-exe { background: var(--blue); color: #fff; border: none; padding: 18px; border-radius: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; letter-spacing: 1px; }
+        input:focus { border-color: var(--accent); box-shadow: 0 0 15px rgba(195,0,82,0.3); }
+        .btn-exe { background: var(--accent); color: #fff; border: none; padding: 18px; border-radius: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; letter-spacing: 1px; }
         .btn-pdf { background: transparent; border: 1px solid var(--border); color: #fff; padding: 10px; border-radius: 8px; cursor: pointer; width: 100%; margin-bottom: 20px; }
+        .warning { color: #ff4d4d; font-size: 10px; font-weight: bold; display: none; }
     </style>
 </head>
 <body>
-    <div id="lock"><div><h1 style="font-size: 80px;">🔒</h1><h2>ACESSO REVOGADO</h2></div></div>
+    <div id="lock"><div><h1 style="font-size: 80px;">🔒</h1><h2>SISTEMA BLOQUEADO</h2><p>Licença V8 Inválida ou Expirada.</p></div></div>
     <nav>
-        <div style="font-weight: bold; letter-spacing: 2px;">SÍRIUS <span style="color:var(--blue)">V25</span></div>
-        <div style="width: 10px; height: 10px; background: #00ffa3; border-radius: 50%; box-shadow: 0 0 10px #00ffa3;"></div>
+        <div style="font-weight: bold; letter-spacing: 2px;">CÁSSIA PROMPT <span style="color:var(--accent)">V8 GOD MODE</span></div>
+        <div style="display: flex; align-items: center; gap: 10px; font-size: 10px; color: #00ffa3;">
+            <div style="width: 10px; height: 10px; background: #00ffa3; border-radius: 50%; box-shadow: 0 0 10px #00ffa3;"></div>
+            RIGOR JURÍDICO ATIVO
+        </div>
     </nav>
     <main>
         <div class="glass-panel">
             <div class="sidebar">
-                <button class="btn-pdf" onclick="gerarPDF()">📄 EXTRAIR PDF</button>
-                <div style="margin-top: 50px; font-size: 11px; opacity: 0.4;">PROTOCOLOS:<br>• RIGOR JURÍDICO V25<br>• LGPD ENCRYPTED</div>
+                <button class="btn-pdf" onclick="gerarPDF()">📄 EXTRAIR PDF V8</button>
+                <div style="margin-top: 50px; font-size: 11px; opacity: 0.5;">
+                    <p>• ANTI-BABOSEIRA V2</p>
+                    <p>• FILTRO ANTI-PREGUIÇA</p>
+                    <p>• SEGURANÇA MÁXIMA LGPD</p>
+                </div>
             </div>
             <div class="workspace">
                 <label>■ Persona Responsável</label>
-                <input type="text" id="persona" placeholder="Nome da Advogada">
+                <input type="text" id="persona" placeholder="Dra. Responsável">
                 <label>■ Matriz de Objetivo</label>
-                <input type="text" id="objetivo" placeholder="Ex: Petição Inicial">
+                <input type="text" id="objetivo" placeholder="Ex: Recurso Especial">
                 <label>■ Núcleo de Fatos (Corpus)</label>
-                <textarea id="factos" style="flex:1; resize: none;" placeholder="Deposite os fatos crus aqui..."></textarea>
-                <button class="btn-exe" onclick="alert('Iniciando Inteligência Sírius...')">Executar Protocolo</button>
+                <textarea id="factos" style="flex:1; resize: none;" placeholder="Deposite aqui os fatos estruturados..."></textarea>
+                <div id="anti-preguica" class="warning">⚠️ ERRO: ARGUMENTOS MUITO CURTOS. A IA RECUSA PROCESSAR POR FALTA DE RIGOR.</div>
+                <button class="btn-exe" onclick="executar()">Executar Protocolo V8</button>
             </div>
         </div>
     </main>
@@ -66,22 +75,37 @@
     const userId = urlParams.get('id');
 
     if (!userId) {
-        document.body.innerHTML = "<h1>ID INVÁLIDO</h1>";
+        document.body.innerHTML = "<h1>ACESSO NEGADO</h1>";
     } else {
         db.ref('clientes/' + userId).on('value', (snap) => {
             if (!snap.exists()) document.getElementById('lock').style.display = 'flex';
         });
     }
 
+    function executar() {
+        const corpus = document.getElementById('factos').value;
+        const aviso = document.getElementById('anti-preguica');
+        
+        // SISTEMA ANTI-PREGUIÇA: Se tiver menos de 50 caracteres, o sistema trava.
+        if (corpus.length < 50) {
+            aviso.style.display = 'block';
+            alert("PROTOCOLO NEGADO: Dados insuficientes para garantir segurança jurídica. Insira mais detalhes no Corpus.");
+        } else {
+            aviso.style.display = 'none';
+            alert("PROTOCOLO V8 INICIADO: Aplicando Rigor Técnico e Filtragem Anti-Baboseira.");
+        }
+    }
+
     async function gerarPDF() {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
-        doc.text("SÍRIUS V25 - RELATÓRIO JURÍDICO", 20, 20);
-        doc.text("Dra: " + document.getElementById('persona').value, 20, 40);
-        doc.text("Fatos:", 20, 60);
+        doc.setFillColor(195, 0, 82); doc.rect(0, 0, 210, 20, 'F');
+        doc.setTextColor(255, 255, 255); doc.text("CÁSSIA PROMPT V8 - RELATÓRIO JURÍDICO", 20, 13);
+        doc.setTextColor(0, 0, 0); doc.text("Dra: " + document.getElementById('persona').value, 20, 40);
+        doc.text("Objetivo: " + document.getElementById('objetivo').value, 20, 50);
         const text = doc.splitTextToSize(document.getElementById('factos').value, 170);
         doc.text(text, 20, 70);
-        doc.save("Sirius_V25_Relatorio.pdf");
+        doc.save("Relatorio_V8_Elite.pdf");
     }
 </script>
 </body>
