--- a/cass/admin.html
+++ b/cass/admin.html
@@ -7,18 +7,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;900&display=swap');
-        body { font-family: 'Outfit', sans-serif; background: #0f172a; }
-        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); }
+        :root { --bg-body: #0f172a; --text-main: #e2e8f0; --glass-bg: rgba(255, 255, 255, 0.03); }
+        body.light-mode { --bg-body: #f1f5f9; --text-main: #1e293b; --glass-bg: rgba(255, 255, 255, 0.8); }
+        body { font-family: 'Outfit', sans-serif; background: var(--bg-body); color: var(--text-main); transition: background 0.3s ease; }
+        .glass { background: var(--glass-bg); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); }
+        .theme-btn { position: fixed; top: 20px; right: 20px; z-index: 100; padding: 10px; border-radius: 50px; background: #ec4899; color: white; font-size: 10px; font-weight: bold; cursor: pointer; border: none; }
     </style>
 </head>
-<body class="text-slate-200 p-6">
-
+<body class="p-6">
+    <button class="theme-btn" onclick="toggleTheme()">MUDAR TEMA</button>
     <div class="max-w-md mx-auto mt-10">
         <header class="text-center mb-10">
             <h1 class="text-3xl font-black text-pink-500 uppercase italic">Painel de Controlo</h1>
             <p class="text-slate-500 text-xs font-bold uppercase tracking-widest">Administração Cássia Prompt</p>
         </header>
-
         <div class="glass p-8 rounded-[2.5rem] shadow-2xl border border-pink-500/20 space-y-6">
             <div>
                 <h2 class="text-sm font-black text-slate-400 uppercase mb-4">Link de Acesso dos Clientes</h2>
@@ -27,36 +29,35 @@
                         https://cassiakelly995-lab.github.io/meu-app/cass/cassia-app.html?token=access-cassia-2026
                     </p>
                 </div>
-                <button onclick="copiarLink()" class="w-full mt-4 bg-pink-600 hover:bg-pink-700 p-4 rounded-xl font-black uppercase text-xs transition-all shadow-lg">
+                <button onclick="copiarLink()" class="w-full mt-4 bg-pink-600 hover:bg-pink-700 p-4 rounded-xl font-black uppercase text-xs transition-all shadow-lg text-white">
                     📋 Copiar Link Oficial
                 </button>
             </div>
-
             <hr class="border-slate-800">
-
             <div class="space-y-3">
                 <h2 class="text-sm font-black text-slate-400 uppercase">Estado do Sistema</h2>
                 <div class="flex items-center gap-3">
                     <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></div>
                     <p class="text-sm font-bold text-green-500">Servidor Online & Seguro</p>
                 </div>
-                <p class="text-[11px] text-slate-500">O token atual é fixo para garantir estabilidade máxima nos teus testes do Instagram.</p>
+                <p class="text-[11px] text-slate-500">O token atual é fixo para garantir estabilidade máxima.</p>
             </div>
         </div>
-
-        <div class="text-center mt-8">
-            <a href="cassia-app.html?token=access-cassia-2026" class="text-slate-500 hover:text-white text-xs font-bold uppercase tracking-widest underline">
-                Aceder ao Gerador de Prompts
-            </a>
-        </div>
+        <footer class="mt-12 pt-6 border-t border-slate-800 text-center">
+            <p class="text-[9px] text-slate-500 leading-relaxed uppercase tracking-tighter">
+                CONTEÚDO GERADO POR IA. A CONFERÊNCIA TÉCNICA E JURÍDICA É OBRIGATÓRIA.
+            </p>
+        </footer>
     </div>
-
     <script>
+        if (localStorage.getItem('theme') === 'light') document.body.classList.add('light-mode');
+        function toggleTheme() {
+            document.body.classList.toggle('light-mode');
+            localStorage.setItem('theme', document.body.classList.contains('light-mode') ? 'light' : 'dark');
+        }
         function copiarLink() {
             const link = document.getElementById('linkOficial').innerText.trim();
-            navigator.clipboard.writeText(link).then(() => {
-                alert("🚀 Link copiado! Já podes enviar para os teus clientes do Instagram.");
-            });
+            navigator.clipboard.writeText(link).then(() => alert("🚀 Link copiado!"));
         }
     </script>
 </body>
