--- a/v25.html
+++ b/v25.html
@@ -12,7 +12,7 @@
     <style>
         :root { 
             --ms-blue: #0078d4; --bg: #030303; --card: #0a0a0a; --text: #ffffff; 
-            --border: #1a1a1a; --rigor-high: #00ffa3; --gold: #c5a059;
+            --border: #1a1a1a; --rigor-high: #00ffa3;
             --glow: 0 0 15px rgba(0, 120, 212, 0.6);
         }
 
@@ -49,8 +49,9 @@
         #resultado-area { display: none; margin-top: 30px; width: 100%; max-width: 800px; animation: fadeIn 0.5s ease; }
         #prompt-final { width: 100%; height: 350px; background: #000; color: var(--rigor-high); border: 1px solid var(--rigor-high); padding: 20px; border-radius: 10px; font-family: monospace; resize: none; }
 
-        footer { margin-top: 50px; padding: 40px; border-top: 1px solid var(--border); text-align: center; }
-        #status-seguranca { color: var(--rigor-high); font-size: 10px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; }
+        footer { margin-top: 50px; padding: 40px; border-top: 1px solid var(--border); text-align: center; line-height: 1.6; }
+        .footer-legal { color: var(--rigor-high); font-size: 10px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; display: block; margin-bottom: 5px; }
+        .footer-notice { color: var(--text); font-size: 9px; opacity: 0.6; text-transform: uppercase; }
     </style>
 </head>
 <body id="app-body">
@@ -70,14 +71,14 @@
         <label>Rigor Inteligente V8 - God Mode</label>
         <div class="rigor-container"><div id="rigor-bar" class="rigor-bar"></div></div>
         
-        <label>1. Contexto ou Dados Brutos (O que você tem?)</label>
+        <label>1. Contexto ou Dados Brutos</label>
         <textarea id="fatos" rows="4" oninput="atualizar()" placeholder="Insira fatos, textos, códigos ou problemas..."></textarea>
 
-        <label>2. Parâmetros de Rigor (Regras, Leis ou Critérios)</label>
-        <textarea id="base" rows="3" oninput="atualizar()" placeholder="Quais leis, normas ou critérios o sistema deve obedecer?"></textarea>
+        <label>2. Parâmetros de Rigor (Regras ou Critérios)</label>
+        <textarea id="base" rows="3" oninput="atualizar()" placeholder="Quais normas ou critérios o sistema deve obedecer?"></textarea>
 
-        <label>3. Objetivo Final (O que você quer entregar?)</label>
-        <input type="text" id="destino" oninput="atualizar()" placeholder="Ex: Petição Inicial, Relatório Técnico, Análise de Dados...">
+        <label>3. Objetivo Final</label>
+        <input type="text" id="destino" oninput="atualizar()" placeholder="Ex: Relatório Técnico, Artigo, Análise..."></textarea>
 
         <label>4. Documentação PDF</label>
         <div class="upload-area" onclick="document.getElementById('pdf-file').click()">
@@ -97,7 +98,9 @@
 </main>
 
 <footer>
-    <span id="status-seguranca">VERIFICANDO SEGURANÇA JURÍDICA...</span>
+    <span class="footer-legal">Segurança Jurídica & Rigor Técnico Ativado</span>
+    <span class="footer-notice">O uso deste sistema é de responsabilidade exclusiva do usuário.</span><br>
+    <span class="footer-notice">Este sistema não grava dados e está em total conformidade com a LGPD.</span>
 </footer>
 
 <script>
@@ -112,7 +115,6 @@
         db.ref('clientes/' + userId).on('value', (snap) => {
             if (snap.exists()) {
                 document.getElementById('loader').style.display = 'none';
-                document.getElementById('status-seguranca').innerText = "CONEXÃO SEGURA: " + userId.toUpperCase();
             } else {
                 document.body.innerHTML = `<div style="background:#000; height:100vh; display:flex; align-items:center; justify-content:center; color:red; text-align:center;"><h1>🛡️ ACESSO REVOGADO</h1></div>`;
             }
@@ -147,20 +149,20 @@
         const d = document.getElementById('destino').value;
         
         const mestre = `### [ PROTOCOLO CÁSSIA V8 - ELITE UNIVERSAL ] ###
-IDENTIDADE: Você é um Consultor Nível 10, especialista em lógica e autoridade técnica.
-CONDIÇÃO: Ignore argumentos dúbios, alucinações ou "baboseiras" sem evidência.
+IDENTIDADE: Consultor Nível 10 - Especialista em Lógica e Veracidade.
+DIRETRIZ: Bloqueio total de informações falsas, dúbias ou sem evidência.
 
-${fileName ? `DOCUMENTO ANEXO: "${fileName}" (Transcrever conteúdo fielmente).\n` : ''}
-CONTEÚDO BRUTO: ${f}
-PARÂMETROS/LEIS: ${b}
-MISSÃO FINAL: ${d}
+${fileName ? `DOCUMENTO: "${fileName}" (Transcrever conteúdo).\n` : ''}
+DADOS: ${f}
+CRITÉRIOS: ${b}
+MISSÃO: ${d}
 
-ETAPAS OBRIGATÓRIAS:
-1. FILTRAGEM: Descarte qualquer informação falsa ou duvidosa presente no conteúdo bruto.
-2. ESTRUTURAÇÃO: Construa o resultado com vocabulário de alta performance e rigor lógico.
-3. VERIFICAÇÃO: Se algo não tiver base técnica ou legal, emita um alerta crítico.
+ESTRUTURA DE RESPOSTA:
+1. DESTRUTURAÇÃO: Filtragem contra informações duvidosas.
+2. RIGOR: Vocabulário técnico e alta performance.
+3. CONCLUSÃO: Solução real e autoridade técnica.
 
-RESPOSTA: Resultado de ponta, focado em solução real e autoridade máxima.`;
+RESPOSTA: Resultado de ponta.`;
 
         document.getElementById('prompt-final').value = mestre;
         document.getElementById('resultado-area').style.display = 'block';
